Dev (#31)
* Fix hotfix...

* Edit post creation dto

* Accept PostCreationDto as form data

* Response russification (#26)

* Return messages from /auth and /user  on russian language

* Edit some reply for incorrect dto

* Create test-dev

* Rename test-dev to test-dev.yml

* Image upload max size (#27)

* Set max upload size to 3500 bytes

* Move s3 logic classes to service.s3, russificate s3 some error responses

* Build and push dockerfile with version tag and "latest" tag

---------

Co-authored-by: nobodyknowsdotcom <nobodyknowsdotcom@gmail.com>

* Update docker-compose.yml

Use latest tag for application image

* Add endpoint to fetch all posts, russificate post errors for client (#29)

* Add all posts endpoint, add posts response russification

* Set new version

---------

Co-authored-by: nobodyknowsdotcom <nobodyknowsdotcom@gmail.com>

* Update PostService.java

---------

Co-authored-by: nobodyknowsdotcom <nobodyknowsdotcom@gmail.com>